fixed down arrows

--- a/index.html
+++ b/index.html
@@ -63,23 +63,24 @@
         </div>
         <a href="#two" class="goto-next scrolly">Next</a>
       </div>
-    </section>
-
-    <section id="three" class="main special">
+		</section>
+		
+ <!-- Two -->
+    <section class="main special">
       <div class="container">
         <header class="major">
-          <h2>Projects</h2>
+          <h2 id="two">Projects</h2>
         </header>
 
         <!-- First Project -->
         <header>
           <h4>Groupmuse</h4>
-          <p>App built with React Native</p>
+          <p>Collaborated on an app built with React Native</p>
         </header>
-        <div class="content">
-          <span class="image fit primary"
-            ><img src="images/project1.png" alt=""
-          /></span>
+        <div class="box alt">
+          <div class="row gtr-uniform gtr-50">
+            <div class="col-12"><span class="image fit"><img src="images/project1.png" alt="" /></span></div>
+          </div>
         </div>
 
 
